# Uni-Excercise-JiTP1

./: .gitignore  README.md
zad_4/: gidate.cpp  gidate.h  zad_4.cbp  zad_4.cpp  zad_4.depend  zad_4.layout
zad_9/: CMakeLists.txt  error_messenger.h  tst.h  vec.h  vec_test.cpp  zad_9.cbp
zad_c10/: entry.h  entry_test.cpp  fraction.h  zad_c10.cbp  zad_c10.cpp  zc10.cpp
zad_c11/: CMakeLists.txt  entry.h  word_counter.h  zad_11.cpp  zad_c11.cbp
zad_c12/: BatFlight.h  CMakeLists.txt  main.cpp  zad_c12.cbp
zad_c12a/: CMakeLists.txt  main.cpp
zad_c12b/: CMakeLists.txt  main.cpp
zad_c15/: CMakeLists.txt  word_counter.h  zad_c15.cpp
zad_c5/: duodecimal.cpp  duodecimal.h  main.cpp  my_file.txt  test.cpp  zad_c5.cbp  zad_c5.depend  zad_c5.layout
zad_c6/: mayan.cpp  mayan.h  my_file.txt  zad_c6.cbp  zad_c6.cpp  zad_c6.depend  zad_c6.layout
zad_c7/: simpleDate.cpp  simpleDate.h  test.cpp  zad_c7.cbp  zad_c7.depend  zad_c7.layout
zad_c8/: gidate.cpp  zad_c8.cbp
zad_c9/: fraction.cpp  fraction.h  zad_c9.cbp  zad_c9.cpp
zad_m1/: zad_m1.cbp  zad_m1.cpp  zad_m1.layout
zad_m2/: zad_m2.cbp  zad_m2.cpp  zad_m2.depend  zad_m2.layout
zad_m4/: zad_m4.cbp  zad_m4.cpp  zad_m4.layout
